fixed overflow issue for mobile sites on main page

--- a/react-portfolio/src/components/About/index.scss
+++ b/react-portfolio/src/components/About/index.scss
@@ -30,10 +30,10 @@ h1{
 
 #card-group {
   position: absolute;
-  width: 50vh;
-  height: 50vh;
-  left: 40%;
-  top: 0%;
+  width: 20%;
+  height: 20%;
+  right: 35%;
+  top: 10%;
   @media screen and (max-width: 800px) {
     // Styles for screens smaller than or equal to 800px
     visibility: hidden;
@@ -130,7 +130,7 @@ h1{
   position: absolute;
   right: 0;
   top: 0;
-  width: 50%;
+  width: 100%;
   height: 100%;
   background-color: #35639A;
   z-index: -1; // Position it behind the other content
@@ -144,5 +144,5 @@ h1{
 
 @keyframes slideInFromRight {
   from { transform: translateX(100%); }
-  to { transform: translateX(0); }
+  to { transform: translateX(50%); }
 }
